fix: loading text align

--- a/public/styles/channel.css
+++ b/public/styles/channel.css
@@ -24,8 +24,13 @@ path {
 
 #noItem>.center {
   position: absolute;
-  left: 60%;
-  top: 48%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 }
 
 body[data-scene=list]>.container#list {
